current version
===============

compiling:
- added .exe extension to binaries of MinGW

interface:
- new parameter "maxbounddist" for SCIPincludeSepa() and constructor ObjSepa()
- new method SCIPsepaGetMaxbounddist()
- removed parameter "branchdir" from SCIPbranchVar()
- new parameters "leftchild", "eqchild", and "downchild" for SCIPbranchVar()
- new method SCIPcalcNodeselPriority()
- new parameter "estimate" for SCIPcreateChild()
- removed method SCIPnodeGetPriority()
- new method SCIPnodeGetEstimate()
- new methods SCIPgetLocalOrigEstimate() and SCIPgetLocalTransEstimate()
- new parameter "restart" for method SCIPfreeSolve()
- new method SCIPnodeGetDomchg()
- new methods SCIPboundchgGetNewbound(), SCIPboundchgGetVar(), SCIPboundchgGetBoundchgtype(),
  SCIPboundchgGetBoundtype(), SCIPboundchgIsRedundant(), SCIPdomchgGetNBoundchgs(), SCIPdomchgGetBoundchg()
- new method SCIPisStopped()
- SCIPgetVarStrongbranch() now also returns lperror == TRUE if the solving process should be stopped, e.g., because
  of a time limit

plugins:
- improved performance of linear constraint propagation by delaying some floor/ceil calculations
- new node selection rule "estimate" (best estimate search)
- best estimate search is now used in all large neighborhood search heuristics
- new heuristic "actconsdiving" following an idea of John Chinneck
- new node selection rule "hybridestim"
- improved performance of clique cut separator
- modified reader "sol", st. files which where created via typing the order of commands 'set log *.sol', 'disp sol var -', 
  'set log cplex.log' in Cplex can now be read
- modified probing presolver to do multiple cycles if called in subsequent runs
- greatly improved performance of LP file reader by replacing string copies with pointer copies
- changed sort algorithm in probing presolver
- added flow cover separator

parameters:
- new parameter "separating/clique/backtrackfreq" to speed up clique cut separation in heuristic fashion