@@ -1,0 +1,39 @@
+/* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
+/*                                                                           */
+/*                  This file is part of the program and library             */
+/*         SCIP --- Solving Constraint Integer Programs                      */
+/*                                                                           */
+/*    Copyright (C) 2002-2006 Tobias Achterberg                              */
+/*                                                                           */
+/*                  2002-2006 Konrad-Zuse-Zentrum                            */
+/*                            fuer Informationstechnik Berlin                */
+/*                                                                           */
+/*  SCIP is distributed under the terms of the ZIB Academic License.         */
+/*                                                                           */
+/*  You should have received a copy of the ZIB Academic License              */
+/*  along with SCIP; see the file COPYING. If not email to scip@zib.de.      */
+/*                                                                           */
+/* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
+#pragma ident "@(#) $Id: heur_oneopt.h,v 1.1 2007/02/28 10:04:10 bzfberth Exp $"
+
+/**@file   heur_oneopt.h
+ * @brief  oneopt primal heuristic
+ * @author Timo Berthold
+ */
+
+/*---+----1----+----2----+----3----+----4----+----5----+----6----+----7----+----8----+----9----+----0----+----1----+----2*/
+
+#ifndef __SCIP_HEUR_ONEOPT_H__
+#define __SCIP_HEUR_ONEOPT_H__
+
+
+#include "scip/scip.h"
+
+
+/** creates the oneopt primal heuristic and includes it in SCIP */
+extern
+SCIP_RETCODE SCIPincludeHeurOneopt(
+   SCIP*                 scip                /**< SCIP data structure */
+   );
+
+#endif
